# FKSFold

./: README.md  pyproject.toml  requirements.in
chai_lab/: chai1.py  chai1_internal_hack.py  main.py
chai_lab/data/dataset/: inference_dataset.py
chai_lab/data/dataset/structure/: all_atom_residue_tokenizer.py  all_atom_structure_context.py
chai_lab/data/io/: cif_utils.py
chai_lab/data/parsing/structure/: entity_type.py
chai_lab/data/sources/: cif.py  pdb.py  pdb.py.bk
chai_lab/model/: diffusion_config.py  embeddings.py
chai_lab/ranking/: ptm.py  rank.py
chai_lab_extension/steering/: base.py  particle_filter.py  scoring.py  trajector_streamer.py  vis_mixin.py
examples/: run.py  run_internal_fks_vis.py  run_save_traj.py
tests_dev/: test_debug_pdb_coords.py  test_ligand_alignment.py  test_pdb.py
